created GameEngineService and QuizEngineService
The game engine provides 2 methods to transform a GameState (positive vs
negative progression) and 1 method to get the initial GameState. The
service gets evolution factors and initial values from a GameParameters
class which gets values from application.properties file. This can
evolve with a database configuration for GameParameters that will allow
to dynamically switch parameters (e.g switch game difficulty).
